--- a/index.html
+++ b/index.html
@@ -15,7 +15,26 @@
         <h1>Harry Potter Characters</h1>
     </header>
     <main>
-        <section id="characters" class="grid-container">
+        <table id="characters" class="grid-container">
+            <thead>
+			<tr>
+		      <th>Image</th>
+		      <th>Name</th>
+		      <th>House</th>
+		      <th>Gender</th>
+		      <th>Year of birth</th>
+		    </tr>
+		</thead>
+		<tbody>
+				<tr>
+					<td><img src="http://hp-api.herokuapp.com/images/harry.jpg"></td>
+          <td>Harry Potter</td>
+          <td>Gryffindor</td>
+          <td>male</td>
+          <td>1980</td>
+        </tr>
+		</tbody>
+</table>
             <!-- <article> -->
                 <!-- <img src="http://hp-api.herokuapp.com/images/harry.jpg"> -->
                 <!-- <h2>Harry Potter</h2> -->
@@ -23,7 +42,6 @@
                 <!-- <p>Date of Birth: 31-07-1980</p> -->
                 <!-- <p>Played by Daniel Radcliffe</p> -->
             <!-- </article> -->
-        </section>
     </main>
 
     <footer>
