--- a/index.html
+++ b/index.html
@@ -1,54 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="app.css">
-    <link rel="shortcut icon" href="https://cederdorff.github.io/img/favicon.webp" type="image/x-icon">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="app.css" />
+    <link
+      rel="shortcut icon"
+      href="https://cederdorff.github.io/img/favicon.webp"
+      type="image/x-icon"
+    />
     <title>Harry Potter Characters</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header>
-        <h1>Harry Potter Characters</h1>
+      <h1>Harry Potter Characters</h1>
     </header>
     <main>
-        <table id="characters" class="grid-container">
-            <thead>
-			<tr>
-		      <th>Image</th>
-		      <th>Name</th>
-		      <th>House</th>
-		      <th>Gender</th>
-		      <th>Year of birth</th>
-		    </tr>
-		</thead>
-		<tbody>
-				<tr>
-					<td><img src="http://hp-api.herokuapp.com/images/harry.jpg"></td>
-          <td>Harry Potter</td>
-          <td>Gryffindor</td>
-          <td>male</td>
-          <td>1980</td>
-        </tr>
-		</tbody>
-</table>
-            <!-- <article> -->
-                <!-- <img src="http://hp-api.herokuapp.com/images/harry.jpg"> -->
-                <!-- <h2>Harry Potter</h2> -->
-                <!-- <p>Gryffindor</p> -->
-                <!-- <p>Date of Birth: 31-07-1980</p> -->
-                <!-- <p>Played by Daniel Radcliffe</p> -->
-            <!-- </article> -->
+      <section id="characters" class="grid-container">
+        <!-- <article> -->
+        <!-- <img src="http://hp-api.herokuapp.com/images/harry.jpg"> -->
+        <!-- <h2>Harry Potter</h2> -->
+        <!-- <p>Gryffindor</p> -->
+        <!-- <p>Date of Birth: 31-07-1980</p> -->
+        <!-- <p>Played by Daniel Radcliffe</p> -->
+        <!-- </article> -->
+      </section>
     </main>
 
     <footer>
-        <p>Potter App by RACE</p>
+      <p>Potter App by RACE</p>
     </footer>
 
     <script src="app.js"></script>
-</body>
-
+  </body>
 </html>
